--- a/resources/assets/sass/_admin.scss
+++ b/resources/assets/sass/_admin.scss
@@ -381,12 +381,10 @@ a {
 @media (max-width: 991px) {
   .content-header > .breadcrumb {
     position: relative;
-    margin-top: 5px;
     top: 0;
     right: 0;
     float: none;
-    background: #d2d6de;
-    padding-left: 10px;
+    padding: 0;
 
     li:before {
       color: #97a0b3;
